--- a/force-app/main/default/classes/SOQL.cls
+++ b/force-app/main/default/classes/SOQL.cls
@@ -16,7 +16,7 @@
  * Users of this class can expect to gain a solid understanding of SOQL in Apex and
  * be prepared to handle data retrieval tasks in Salesforce development.
  *
-  * @author Blanche
+ * @author Blanche Anglea
  */
 
  public with sharing class SOQL {
@@ -27,7 +27,7 @@
      * @return List of all leads with Id, LastName, Company, Phone, Email
      * Update the corresponding test class and testGetAllLeads method to cover this method
      */
-    public static List<Lead> getAllLeads(){
+    public static List<Lead> getAllLeads() {
         return [SELECT Id, LastName, Company, Phone, Email
                 FROM Lead];
     }
@@ -39,11 +39,12 @@
      * @return A list of Contact records.
      * Update the corresponding test class and testGetContactsByFirstName method to cover this method
      */
-    public static List<Contact> getContactsByFirstName(String firstName){
-        return [SELECT Id, Name
+    public static List<Contact> getContactsByFirstName() {
+        return [SELECT Id, FirstName, LastName
                 FROM Contact
-                WHERE FirstName = :firstName];
+                WHERE FirstName = 'John'];
     }
+
 
     /**
      * Question 3
@@ -53,20 +54,18 @@
      * Update the corresponding test class and testGetContactIdsByLastName method to cover this method
      */
     public static List<Id> getContactIdsByLastName() {
-        List<Contact> contacts = [
-            SELECT Id 
-            FROM Contact 
-            WHERE LastName IN ('Smith', 'Jones')
-            ];
+        List<Contact> contacts =    [SELECT Id
+                                    FROM Contact
+                                    WHERE LastName IN ('Smith', 'Jones')];
 
         List<Id> contactIds = new List<Id>();
-        for (Contact contactSmithOrJones : contacts) {
-            contactIds.add(contactSmithOrJones.Id);
+        for (Contact c : contacts) {
+            contactIds.add(c.Id);
         }
 
         return contactIds;
     }
-
+    
     /**
      * Question 4
      * Update/Uncomment the template code to create a method
@@ -77,11 +76,11 @@
      * Update the corresponding test class and testGetClosedWonOpportunityCountByAccount method to cover this method
      */
     public static List<Opportunity> getClosedWonOpportunitiesByAccount(String accountId) {
-        return [SELECT Id, Name, StageName, Amount, CloseDate, AccountId 
-                FROM Opportunity 
+        return [SELECT Id, Name, StageName, Amount, CloseDate, AccountId
+                FROM Opportunity
                 WHERE AccountId = :accountId AND StageName = 'Closed Won'];
     }
-
+    
     /**
      * Question 5
      * Update/Uncomment the template code to create a method
@@ -89,8 +88,9 @@
      * @return The Integer count of Account records.
      * Update the corresponding test class and testGetAccountCount method to cover this method
      */
-    public static Integer getAccountCount() {
-        return [SELECT COUNT() 
+        
+     public static Integer getAccountCount() {
+        return [SELECT COUNT()
                 FROM Account];
         }
 
@@ -102,13 +102,13 @@
      * Update the corresponding test class and testGetTasksDueNextWeek method to cover this method
      */
     public static Map<Id, Task> getTasksDueNextWeek() {
-        List<Task> tasks = [SELECT Id, Subject, ActivityDate 
-                            FROM Task 
+        List<Task> tasks = [SELECT Id, Subject, ActivityDate
+                            FROM Task
                             WHERE ActivityDate >= :Date.today() AND ActivityDate <= :Date.today().addDays(7)];
 
         Map<Id, Task> taskMap = new Map<Id, Task>();
-        for (Task tasksDue : tasks) {
-            taskMap.put(tasksDue.Id, tasksDue);
+        for (Task t : tasks) {
+            taskMap.put(t.Id, t);
         }
 
         return taskMap;
@@ -121,10 +121,11 @@
      * @return A list of Contact records.
      * Update the corresponding test class and testGetContactsByEmailDomain method to cover this method
      */
+
     public static List<Contact> getContactsByEmailDomain(String domain) {
         string emailPattern = '%@' + domain;
-        return [SELECT id, Name, Email 
-                FROM Contact 
+        return [SELECT Id, Name, Email
+                FROM Contact
                 WHERE Email LIKE :emailPattern];
     }
 
@@ -137,9 +138,9 @@
      */
     public static List<Opportunity> getOpportunitiesByNameKeyword(String keyword) {
         String searchKeyword = '%'+ keyword + '%';
-        return [SELECT Id, Name 
-                FROM Opportunity 
-                WHERE Name LIKE :searchKeyword]; 
+        return [SELECT Id, Name
+                FROM Opportunity
+                WHERE Name LIKE :searchKeyword];
     }
 
     /**
@@ -150,7 +151,7 @@
     public static List<Case> getFilterCaseOrigins() {       
         return [SELECT Id, CaseNumber, Origin, Status
                 FROM Case
-                WHERE Origin !='Web' AND ORIGIN !='EMAIL' AND Origin != '']; 
+                WHERE Origin !='Web' AND ORIGIN !='EMAIL' AND Origin != ''];
     }
 
     /**
@@ -169,7 +170,7 @@
                 FROM Lead
                 WHERE (LeadSource = :leadSource OR Title LIKE :searchKeyword)];
     }
-
+    
     /**
      * Question 11
      * Returns the names of all Contacts associated with an Account.
@@ -178,13 +179,13 @@
      * @return A list of Contact LastName.
      */
     public static List<String> getContactNamesByAccount(Id accountId) {
-        List<Contact> contacts = [SELECT Id, LastName 
-                                  FROM Contact 
-                                  WHERE AccountId = :accountId];
+        List<Contact> contacts =    [SELECT Id, LastName
+                                    FROM Contact
+                                    WHERE AccountId = :accountId];
             
         List<String> contactLastNames = new List<String>();
-        for (Contact contact : contacts) {
-            contactLastNames.add(contact.LastName);
+        for (Contact c : contacts) {
+            contactLastNames.add(c.LastName);
     }
 
         return contactLastNames;
@@ -197,17 +198,17 @@
      * @param stage The Stage value to filter Opportunities.
      * @return The total revenue.
      */
+    
     public static Decimal getTotalRevenueByStage(String stage) {
-        AggregateResult[] results = [
-            SELECT SUM(Amount) totalRevenue
-            FROM Opportunity
-            WHERE StageName = :stage OR Amount > 10000
-            ];
+        AggregateResult[] results = [SELECT SUM(Amount) totalRevenue
+                                    FROM Opportunity
+                                    WHERE StageName = :stage OR Amount > 10000];
 
         Decimal totalRevenue = (Decimal)results[0].get('totalRevenue');
 
         return totalRevenue != null ? totalRevenue : 0;
     }
+    
 
     /**
      * Question 13
@@ -215,10 +216,10 @@
      * @return A list of the first 10 Accounts ordered by Name.
      */
     public static List<Account> getFirstTenAccounts() {
-        return [SELECT Id, Name 
+        return [SELECT Id, Name
                 FROM Account
-                ORDER BY Name 
-                LIMIT 10];      
+                ORDER BY Name
+                LIMIT 10];
     }
 
     /**
@@ -240,11 +241,13 @@
      * @return A list of Contacts
      */
     public static List<Contact> getBirthdateContacts() {
-        return [SELECT Id, FirstName, LastName, Birthdate
-                FROM Contact
-                WHERE Birthdate != NULL
-                ORDER BY Birthdate DESC
-                LIMIT 3]; 
+        return [
+            SELECT Id, FirstName, LastName, Birthdate
+            FROM Contact
+            WHERE Birthdate != NULL
+            ORDER BY Birthdate DESC
+            LIMIT 3
+            ]; 
     }
 
     /**
@@ -253,11 +256,13 @@
      * @return A list of Cases
      */
     public static List<Case> getCasesWithStatus() {
-        return [SELECT Id, CaseNumber, Status, CreatedDate
-                FROM Case
-                WHERE Status = 'Open'
-                ORDER BY CreatedDate ASC
-                LIMIT 10 OFFSET 5];
+        return [
+            SELECT Id, CaseNumber, Status, CreatedDate
+            FROM Case
+            WHERE Status = 'Open'
+            ORDER BY CreatedDate ASC
+            LIMIT 10 OFFSET 5
+            ];
     }
 
     /**
@@ -270,9 +275,11 @@
     public static Set<Id> getCaseIdsByAccount(Id accountId) {
         Set<Id> caseIds = new Set<Id>();
 
-        List<Case> cases = [SELECT Id
-                            FROM Case
-                            WHERE AccountId = :accountId];
+        List<Case> cases = [
+            SELECT Id
+            FROM Case
+            WHERE AccountId = :accountId
+            ];
 
         for (Case findCase : cases) {
             caseIds.add(findCase.Id);
@@ -291,9 +298,11 @@
     public static Map<Id, String> getAccountIdsToNamesNotInCountry(String country) {
         Map<Id, String> accountIdsToNames = new Map<Id, String>();
 
-        List<Account> accounts = [SELECT Id, Name
-                                  FROM Account
-                                  WHERE BillingCountry != :country];
+        List<Account> accounts = [
+            SELECT Id, Name
+            FROM Account
+            WHERE BillingCountry != :country
+            ];
 
         for (Account acc : accounts) {
             accountIdsToNames.put(acc.Id, acc.Name);
@@ -310,163 +319,171 @@
      * @return The Account Name of the Contact.
      */
     public static String getAccountNameForContact(String contactId) {
-        Contact contact = [SELECT Account.Name 
-                           FROM Contact 
-                           WHERE Id = :contactId LIMIT 1];
+            Contact contact = [
+                SELECT Account.Name 
+                FROM Contact 
+                WHERE Id = :contactId LIMIT 1
+                ];
 
-        return contact.Account.Name;
-    }
-    
+            return contact.Account.Name;
+        }
+        
 
-/**
- * Question 20
- * Returns single Account that has related opportunities in the same query
- * Example: getAccountAndOpportunitiesFromAccountId('001XXXXXXXXXXXX') should return the Account Name for the Account with the Id and all related Opportunities
- * @param accountId The ID of the Account.
- * @return An Account record with related Opportunities.
- */
+    /**
+     * Question 20
+     * Returns single Account that has related opportunities in the same query
+     * Example: getAccountAndOpportunitiesFromAccountId('001XXXXXXXXXXXX') should return the Account Name for the Account with the Id and all related Opportunities
+     * @param accountId The ID of the Account.
+     * @return An Account record with related Opportunities.
+     */
     public static Account getAccountAndOpportunitiesFromAccountId(Id accountId) {
-        return [SELECT Id, Name, 
-                (SELECT Id, Name, StageName, Amount, CloseDate FROM Opportunities) 
-                FROM Account 
-                WHERE Id = :accountId];
-}
+        return [
+            SELECT Id, Name, 
+            (SELECT Id, Name, StageName, Amount, CloseDate FROM Opportunities) 
+            FROM Account 
+            WHERE Id = :accountId
+            ];
+    }
 
-/**
- * Question 21
- * Retrieves all contacts that have the Mailing State similar to the Account Billing State.
- * Example: getAccountsWithContactsByState('001XXXXXXXXXXXX') should return a list of Contacts that have the same Mailing State as the Account with the Id
- * @param Account Id
- * @return List of contacts with the same Mailing State as the Account Billing State
- */
+    /**
+     * Question 21
+     * Retrieves all contacts that have the Mailing State similar to the Account Billing State.
+     * Example: getAccountsWithContactsByState('001XXXXXXXXXXXX') should return a list of Contacts that have the same Mailing State as the Account with the Id
+     * @param Account Id
+     * @return List of contacts with the same Mailing State as the Account Billing State
+     */
     public static List<Contact> getAccountsWithContactsByState(Id accountId) {
-        Account accountBillingState = [SELECT Id, BillingState
-                                       FROM Account
-                                       WHERE Id = :accountId];
+        Account accountBillingState = [
+            SELECT Id, BillingState
+            FROM Account
+            WHERE Id = :accountId
+            ];
 
-    String billingState = accountBillingState.BillingState;
+        String billingState = accountBillingState.BillingState;
 
-    List<Contact> matchingContacts = [SELECT Id, Name, MailingState, AccountId
-                                      FROM Contact
-                                      WHERE MailingState = :billingState];
+        List<Contact> matchingContacts = [
+            SELECT Id, Name, MailingState, AccountId
+            FROM Contact
+            WHERE MailingState = :billingState
+            ];
 
-    return matchingContacts; 
-}
+        return matchingContacts; 
+    }
 
-/**
- * Question 22
- * Extracts email domains from them leads, then finds Accounts with matching website domains
- * If Lead Email = test@test.com return account with website = www.test.com
- * Example: findAccountsByLeadEmailDomains([set of lead ids]) should return a list of Accounts with matching email domains
- * @param A set of Lead Ids.
- * @return A list of Accounts with matching email domains.
- */
+    /**
+     * Question 22
+     * Extracts email domains from them leads, then finds Accounts with matching website domains
+     * If Lead Email = test@test.com return account with website = www.test.com
+     * Example: findAccountsByLeadEmailDomains([set of lead ids]) should return a list of Accounts with matching email domains
+     * @param A set of Lead Ids.
+     * @return A list of Accounts with matching email domains.
+     */
     public static List<Account> findAccountsByLeadEmailDomains(Set<Id> leadIds) {
-    // Get email domains from Leads
-    Map<String, String> leadDomains = new Map<String, String>();
-    for (Lead lead : [SELECT Id, Email 
-                      FROM Lead 
-                      WHERE Id IN :leadIds]) {
-
-        if (lead.Email != null && lead.Email.contains('@')) {
-            String domain = lead.Email.split('@')[1].toLowerCase(); // Convert to lowercase
-            leadDomains.put(lead.Id, domain);
+        // Get email domains from Leads
+        Map<String, String> leadDomains = new Map<String, String>();
+        for (Lead lead : [SELECT Id, Email FROM Lead WHERE Id IN :leadIds]) {
+            if (lead.Email != null && lead.Email.contains('@')) {
+                String domain = lead.Email.split('@')[1].toLowerCase(); // Convert to lowercase
+                leadDomains.put(lead.Id, domain);
+            }
         }
-    }
-        if (leadDomains.isEmpty()) {
-        return new List<Account>();
-    }
-    List<Account> matchingAccounts = new List<Account>();
-    for (Account account : [SELECT Id, Name, Website 
-                            FROM Account 
-                            WHERE Website != null]) {
-
-        String normalizedWebsite = account.Website.toLowerCase().replace('www.', ''); // Strip "www."
-        if (leadDomains.values().contains(normalizedWebsite)) {
-            matchingAccounts.add(account);
+            if (leadDomains.isEmpty()) {
+            return new List<Account>();
         }
-    }
-    return matchingAccounts;
-}
-
-/**
- * Question 23
- * Clones and Inserts Opportunity Line Items from an original Opportunity to a list of cloned Opportunities.
- * Adds a randomized number between 1 to 3 to the quantity of each line item.
- * Example: cloneLineItems('001XXXXXXXXXXXX', [list of opportunity ids]) should clone the line items from the Opportunity with the Id to each Opportunity in the list
- * @param Original Opportunity Id
- * @param List of cloned Opportunity Ids
- */
-public static void cloneLineItems(Id origOppId, List<Id> cloneOppIds) {
-
-    List<OpportunityLineItem> origOppLineItems = [SELECT Id, Name, OpportunityId, Quantity, PricebookEntryId, UnitPrice
-                                                  FROM OpportunityLineItem
-                                                  WHERE OpportunityId = :origOppId];
-
-    List<OpportunityLineItem> newLineItems = new List<OpportunityLineItem>();
-    
-    Integer randomNumber = Integer.valueOf(Math.floor(Math.random() * 3).intValue()) + 1;
-    
-    for (id cloneOppId : cloneOppIds) {
-        for (OpportunityLineItem origLineItem : origOppLineItems) { 
-            OpportunityLineItem newLineItem = origLineItem.clone(false, true);
-            newLineItem.OpportunityId = cloneOppId;
-            newLineItem.Quantity = newLineItem.Quantity + randomNumber;
-            newLineItems.add(newLineItem);
+        List<Account> matchingAccounts = new List<Account>();
+        for (Account account : [SELECT Id, Name, Website FROM Account WHERE Website != null]) {
+            String normalizedWebsite = account.Website.toLowerCase().replace('www.', ''); // Strip "www."
+            if (leadDomains.values().contains(normalizedWebsite)) {
+                matchingAccounts.add(account);
+            }
         }
+        return matchingAccounts;
     }
     
-    insert newLineItems;
-}
+    /**
+     * Question 23
+     * Clones and Inserts Opportunity Line Items from an original Opportunity to a list of cloned Opportunities.
+     * Adds a randomized number between 1 to 3 to the quantity of each line item.
+     * Example: cloneLineItems('001XXXXXXXXXXXX', [list of opportunity ids]) should clone the line items from the Opportunity with the Id to each Opportunity in the list
+     * @param Original Opportunity Id
+     * @param List of cloned Opportunity Ids
+     */
+    public static void cloneLineItems(Id origOppId, List<Id> cloneOppIds) {
 
-/**
- * Question 24
- * Retrieves the Opportunity Name, Account Name, and Owner Name for Opportunities that have a Stage of 'Closed Won'.
- * @return A list of filtered Opportunity
- */
-public static List<Opportunity> getOpportunityDetailsForClosedWon() {
-    return [SELECT Id, Name, Account.Name, Owner.Name
+        List<OpportunityLineItem> origOppLineItems = [
+            SELECT Id, Name, OpportunityId, Quantity, PricebookEntryId, UnitPrice
+            FROM OpportunityLineItem
+            WHERE OpportunityId = :origOppId
+            ];
+
+        List<OpportunityLineItem> newLineItems = new List<OpportunityLineItem>();
+        
+        Integer randomNumber = Integer.valueOf(Math.floor(Math.random() * 3).intValue()) + 1;
+        
+        for (id cloneOppId : cloneOppIds) {
+            for (OpportunityLineItem origLineItem : origOppLineItems) { 
+                OpportunityLineItem newLineItem = origLineItem.clone(false, true);
+                newLineItem.OpportunityId = cloneOppId;
+                newLineItem.Quantity = newLineItem.Quantity + randomNumber;
+                newLineItems.add(newLineItem);
+            }
+        }
+        
+        insert newLineItems;
+    }
+
+    /**
+     * Question 24
+     * Retrieves the Opportunity Name, Account Name, and Owner Name for Opportunities that have a Stage of 'Closed Won'.
+     * @return A list of filtered Opportunity
+     */
+    public static List<Opportunity> getOpportunityDetailsForClosedWon() {
+        return [
+            SELECT Id, Name, Account.Name, Owner.Name
             FROM Opportunity
-            WHERE StageName = 'Closed Won']; 
-}
+            WHERE StageName = 'Closed Won'
+            ]; 
+    }
 
-/**
- * Question 25
- * Sets the 'Primary_Contact__c' field for all Closed Won Opportunities to the Contact on the associated Account with the alphabetically first first name.
- * Example: if there are two Contacts on the Account, "Billy" and "Abby," the 'Primary_Contact__c' will be set to "Abby."
- */
-public static void setPrimaryContact() {
-    
-    Set<Id> accountIds = new Set<Id>();
-    
-    List<Opportunity> closedWonOpportunities = getOpportunityDetailsForClosedWon();
-    
-    for (Opportunity opp : closedWonOpportunities) {
-        accountIds.add(opp.AccountId);
-    }
-    
-    List<Contact> contacts = [SELECT Id, FirstName, AccountId
-                              FROM Contact
-                              WHERE AccountId IN :accountIds
-                              ORDER BY FirstName ASC];
+    /**
+     * Question 25
+     * Sets the 'Primary_Contact__c' field for all Closed Won Opportunities to the Contact on the associated Account with the alphabetically first first name.
+     * Example: if there are two Contacts on the Account, "Billy" and "Abby," the 'Primary_Contact__c' will be set to "Abby."
+     */
+    public static void setPrimaryContact() {
+        
+        Set<Id> accountIds = new Set<Id>();
+        
+        List<Opportunity> closedWonOpportunities = getOpportunityDetailsForClosedWon();
+        
+        for (Opportunity opp : closedWonOpportunities) {
+            accountIds.add(opp.AccountId);
+        }
+        
+        List<Contact> contacts = [
+            SELECT Id, FirstName, AccountId
+            FROM Contact
+            WHERE AccountId IN :accountIds
+            ORDER BY FirstName ASC
+            ];
 
-    Map<Id, Contact> accountContactsMap = new Map<Id, Contact>();
-    
-    for (Contact con : contacts) {
-        if (!accountContactsMap.containsKey(con.AccountId)) {
-            accountContactsMap.put(con.AccountId, con);
+        Map<Id, Contact> accountContactsMap = new Map<Id, Contact>();
+        
+        for (Contact con : contacts) {
+            if (!accountContactsMap.containsKey(con.AccountId)) {
+                accountContactsMap.put(con.AccountId, con);
+            }
         }
-    }
-    
-    List<Opportunity> opportunitiesToUpdate = new List<Opportunity>();
-    
-    for (Opportunity opp : closedWonOpportunities) {
-        if (accountContactsMap.containsKey(opp.AccountId)) {
-            opp.Primary_Contact__c = accountContactsMap.get(opp.AccountId).Id;
-            opportunitiesToUpdate.add(opp);
+        
+        List<Opportunity> opportunitiesToUpdate = new List<Opportunity>();
+        
+        for (Opportunity opp : closedWonOpportunities) {
+            if (accountContactsMap.containsKey(opp.AccountId)) {
+                opp.Primary_Contact__c = accountContactsMap.get(opp.AccountId).Id;
+                opportunitiesToUpdate.add(opp);
+            }
         }
+        
+        update opportunitiesToUpdate;
     }
-    
-    update opportunitiesToUpdate;
-}
 }
